fix(dialog): misalignment in Firefox RTL mode
see telerik/kendo-angular-dialog#53

--- a/scss/dialog/_layout.scss
+++ b/scss/dialog/_layout.scss
@@ -16,6 +16,8 @@
         min-width: 450px;
         position: fixed;
 
+        // fix for FF flexbox bug in RTL
+        width: 1px;
 
         // Centered
         &.k-dialog-centered {
